@@ -1,4 +1,7 @@
 release 1.11
+- Fixed issue 835
+  http://java.net/jira/browse/JERSEY-835
+  JsonLexer used to throw java.lang.Error in case of syntactical errors with the JSON stream. Fixed to throw JsonFormatException which gets subsequently wrapped (by the message processing chain) an a WebApplicationException with the status code 400.
 - Fixed issue 627
   http://java.net/jira/browse/JERSEY-627
   Parameters of media type are not quoted correctly if containing separators.
